--- a/Dockerfile.mineru
+++ b/Dockerfile.mineru
@@ -18,6 +18,9 @@ RUN pip install --upgrade pip
 
 RUN pip install mineru[all] -i https://mirrors.aliyun.com/pypi/simple/
 
+RUN apt update
+RUN apt install -y libglib2.0-0
+
 RUN mineru-models-download -s modelscope -m all
 
 WORKDIR /workspace
